@@ -1,3 +1,6 @@
+* Mon Sep 17 2012 Dan Prince <dprince@redhat.com> - 1.2.0
+  - Add provider for OpenStack.
+
 * Thu Aug 23 2012 Dan Prince <dprince@redhat.com> - 1.1.1
   - Add 'libvirt_use_sudo' option to config file.
   - Move config parameter checks into specific providers.
